--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -8,14 +8,13 @@
     android:orientation="vertical"
     tools:context=".Profile">
 
-
-
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="20dp"
         android:scaleType="fitXY"
+        android:contentDescription="@string/profile"
         android:layout_gravity="center"
         app:srcCompat="@drawable/ic_account" />
 
@@ -95,14 +94,7 @@
         android:gravity="start|top"
         android:inputType="textMultiLine" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_marginLeft="05dp"
-        android:layout_marginTop="10dp"
-        app:srcCompat="@drawable/ic_edit" />
+
 </LinearLayout>
 <TextView
     android:id="@+id/tvContacts"
@@ -131,20 +123,14 @@
         android:textSize="20sp" />
     <EditText
         android:id="@+id/etContact1"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
         android:layout_weight="1"
         android:ems="10"
         android:inputType="textPersonName" />
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_marginTop="40dp"
-        app:srcCompat="@drawable/ic_edit" />
+
 </LinearLayout>
 <LinearLayout
     android:layout_width="wrap_content"
@@ -163,19 +149,13 @@
     />
     <EditText
         android:id="@+id/etContact2"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         android:layout_weight="1"
         android:ems="10"
         android:inputType="textPersonName" />
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_marginTop="10dp"
-        app:srcCompat="@drawable/ic_edit" />
+
 </LinearLayout>
 <Button
     android:id="@+id/butSave"
