--- a/app/src/main/res/layout/activity_volunteer.xml
+++ b/app/src/main/res/layout/activity_volunteer.xml
@@ -1,75 +1,72 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="UTF-8"?>
+<RelativeLayout android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Volunteer">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".Volunteer"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
-        android:id="@+id/tvVolunteer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="44dp"
-        android:fontFamily="sans-serif-black"
         android:text="@string/vol"
+        android:id="@+id/tvVolunteer"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="5dp"
+        android:fontFamily="monospace"
+        android:textColor="@color/tool"
+        android:textStyle="bold"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/cardView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.877"></TextView>
+        ></TextView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="120dp"
+        android:layout_width="135dp"
         android:layout_height="130dp"
-        android:padding="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.147"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.284">
-    <TextView
-        android:id="@+id/tvRaise"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/raise_complaint"
-        android:padding="10dp"
-        android:textColor="@color/colorPrimary"
-        android:fontFamily="sans-serif-black"
-        android:textSize="21sp"
-        android:layout_gravity="center"></TextView>
-    </androidx.cardview.widget.CardView>
+        android:layout_below="@id/tvVolunteer"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="35dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="1dp"
+        app:cardMaxElevation="1.2dp">
 
+        <TextView
+            android:id="@+id/tvRaise"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="sans-serif-black"
+            android:padding="10dp"
+            android:gravity="center"
+            android:text="@string/raise_complaint"
+            android:textColor="@color/primary"
+            android:textSize="21sp"></TextView>
+    </androidx.cardview.widget.CardView>
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
-        android:layout_width="120dp"
+        android:layout_width="135dp"
         android:layout_height="130dp"
-        android:layout_marginTop="48dp"
+        android:layout_toEndOf="@id/cardView"
+        android:layout_below="@id/tvVolunteer"
+        android:layout_alignTop="@id/cardView"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="1dp"
         app:cardMaxElevation="1.2dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.617"
-        app:layout_constraintStart_toEndOf="@+id/cardView"
-        app:layout_constraintTop_toBottomOf="@+id/tvVolunteer"
-        app:layout_constraintVertical_bias="0.005">
+        >
+
         <TextView
             android:id="@+id/tvAmbulance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/ambulance"
-            android:padding="10dp"
-
-            android:textColor="@color/colorPrimary"
+            android:layout_gravity="center"
             android:fontFamily="sans-serif-black"
-            android:textSize="18sp"
-            android:layout_gravity="center"></TextView>
+            android:padding="10dp"
+            android:text="@string/ambulance"
+            android:textColor="@color/primary"
+            android:textSize="21sp"></TextView>
     </androidx.cardview.widget.CardView>
-
     <ImageView
         android:id="@+id/help_img"
         android:layout_width="150dp"
@@ -77,34 +74,43 @@
         android:layout_marginTop="224dp"
         android:contentDescription="@string/qhelp"
         android:src="@drawable/help"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvVolunteer"></ImageView>
-
+        android:layout_centerInParent="true"></ImageView>
     <androidx.cardview.widget.CardView
         android:id="@+id/cdExit"
         android:layout_width="300dp"
         android:layout_height="50dp"
         app:cardCornerRadius="8dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
         app:cardElevation="1dp"
+        android:layout_below="@id/help_img"
         app:cardMaxElevation="1.2dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/help_img">
+        >
 
         <TextView
             android:id="@+id/tvExit"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:fontFamily="sans-serif-black"
-            android:gravity="center"
-            android:padding="10dp"
+            android:padding="8dp"
             android:text="@string/exit"
-            android:textColor="@color/colorPrimary"
-            android:textSize="22sp"></TextView>
+            android:textColor="@color/dark"
+            android:textSize="22sp"
+            tools:layout_editor_absoluteX="56dp"
+            tools:layout_editor_absoluteY="455dp"></TextView>
+
     </androidx.cardview.widget.CardView>
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/text_in_volunteer"
+        android:background="@drawable/border"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/cdExit"
+        android:layout_marginTop="25dp"
+        />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
