--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,9 @@
     <color name="colorPrimary">#5a98ec</color>
     <color name="colorPrimaryDark">#457dca</color>
     <color name="colorAccent">#88b0e7</color>
+    <color name="white">#ffffff</color>
+    <color name="tool">#7B1FA2</color>
+    <color name="primary">#6200EE</color>
+    <color name="dark">#3700B3</color>
+    <color name="accent">#BB86FC</color>
 </resources>
