--- a/app/src/main/res/layout/activity_laws_forwomen.xml
+++ b/app/src/main/res/layout/activity_laws_forwomen.xml
@@ -1,17 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".LawsForwomen"
-    android:orientation="vertical">
-
-    <TextView
-        android:layout_width="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <RelativeLayout
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:padding="10dp"
-        android:text="@string/abc"
-        ></TextView>
+        tools:context=".LawsForwomen"
+        >
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/tv_law1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/law1"
+            android:layout_centerHorizontal="true"
+            android:padding="10dp"
+            android:layout_margin="5dp"
+            android:layout_marginTop="3dp"
+            android:background="@drawable/border"
+            android:fontFamily="sans-serif"
+            />
+        <TextView
+            android:id="@+id/tv_law2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/law2"
+            android:layout_centerHorizontal="true"
+            android:padding="10dp"
+            android:layout_below="@id/tv_law1"
+            android:layout_margin="5dp"
+            android:layout_marginTop="3dp"
+            android:background="@drawable/border"
+            android:fontFamily="sans-serif"
+            />
+        <TextView
+            android:id="@+id/tv_law3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/law3"
+            android:layout_centerHorizontal="true"
+            android:padding="10dp"
+            android:layout_below="@id/tv_law2"
+            android:layout_margin="5dp"
+            android:layout_marginTop="3dp"
+            android:background="@drawable/border"
+            android:fontFamily="sans-serif"
+            />
+        <TextView
+            android:id="@+id/tv_law4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/law4"
+            android:layout_centerHorizontal="true"
+            android:padding="10dp"
+            android:layout_below="@id/tv_law3"
+            android:layout_margin="5dp"
+            android:layout_marginTop="3dp"
+            android:background="@drawable/border"
+            android:fontFamily="sans-serif"
+            />
+        <TextView
+            android:id="@+id/tv_law5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/law5"
+            android:layout_centerHorizontal="true"
+            android:padding="10dp"
+            android:layout_below="@id/tv_law4"
+            android:layout_margin="5dp"
+            android:layout_marginTop="3dp"
+            android:background="@drawable/border"
+            android:fontFamily="sans-serif"
+            />
+        <TextView
+            android:id="@+id/tv_law6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/law6"
+            android:layout_centerHorizontal="true"
+            android:padding="10dp"
+            android:layout_below="@id/tv_law5"
+            android:layout_margin="5dp"
+            android:layout_marginTop="3dp"
+            android:background="@drawable/border"
+            android:fontFamily="sans-serif"
+            />
+        <TextView
+            android:id="@+id/tv_law7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/law7"
+            android:layout_centerHorizontal="true"
+            android:padding="10dp"
+            android:layout_below="@id/tv_law6"
+            android:layout_margin="5dp"
+            android:layout_marginTop="3dp"
+            android:background="@drawable/border"
+            android:fontFamily="sans-serif"
+            />
+    </RelativeLayout>
+</ScrollView>
