--- a/app/src/main/res/layout/activity_emergency.xml
+++ b/app/src/main/res/layout/activity_emergency.xml
@@ -5,13 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+
     tools:context=".Emergency">
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/national"
     android:textSize="20sp"
-    android:layout_margin="10dp"
-    android:background="@drawable/border"></TextView>
+    android:layout_margin="5dp"
+    android:padding="10dp"
+    android:layout_gravity="center_horizontal"
+    android:gravity="center"
+    android:background="@drawable/border"/>
 
 </LinearLayout>
