--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,11 @@
     <style name="DrawerColor" parent="Widget.AppCompat.DrawerArrowToggle">
         <item name="color">@color/white</item>
     </style>
+    <style name="text" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">13sp</item>
+    </style>
+    <style name="text1" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#457dca</item>
+    </style>
 </resources>
